2009-05-03
	* MemoWidget() will issue a dialogue if the memo is changed but not saved.
	* Improvement of SearchFiles().
	
2009-05-01
	* mergeCodes() to merge the codings of two code, and add to popup menu of coding Tab.
	
2009-04-27
	* Bugfixes of HL_Case() and delete arributes button.
	* Bugfixes: when delete a file, delete related coding, caselinkage and treefile accordingly.
	
2009-04-26
	* "Show selected file property" popup menu.
	* Rd file of GetCaseId, GetCaseName and RQDAQuery.
	
2009-04-24
	* Add more to the popup menu of F-cat Tab (e.g. "move selected files to  F-cat...").
	
2009-04-21
	* Split GetCaseId to GetCaseId and GetCaseName.
	* New function of RQDAQuery to wrap a call to dbGetQuery.
	
2009-04-20
	* New function of GetCaseId(): the name may be changed in the future.
	
2009-04-19
	* New function of GetFileIdSets, can be used to do more complex conditional retrieval.
	
2009-04-18
	* Minor bugfix related to naming with "'".
	* Add "Clean Project" button.
	
2009-04-17
	* Add documents of RQDA2tm.Rd,retrieval.Rd and GetAttr.Rd.

2009-04-16
	* GetFileId() can return fid of selected files now.
	
2009-04-15
	* "Add To ..." popup menu of files.of.category Widget.
	* bugfixes of codes Tab and Attrs Tab: now can handle code containing "'" correctly.
	* reorganization of files: rename.r is merged to utils.R; Variables.R is renamed to Atrributes.R; AddVarWidget.R is renamed to AttributesWidget.R (rev 87).
	* retrieval() is exported for conditional coding-retrieval.
	
2009-04-14
	* Delete multiple files at a time now.
	* "Delete selected file" and "rename selected file" popup menu of files.of.category Widget.

2009-04-13
	* improve retrieval2() to place cursor at the beginning of the retrieved coding widget.
	* Add cliked handler to C2Info widget.

2009-04-12
	* Double-click handler of Attrs and Journal Tabs.
	* "Show coded/uncoded files only" popup menu for File Category.
	* conditional retrieval.

2009-04-10
	* rename button of journal Tab