@@ -1,5 +1,5 @@
 export(CleanProject,CrossCode,CrossTwo,gselect.list,GetAttr,GetCaseId,GetCaseName,
-       GetCodingTable,GetFileId,GetFileIdSets,
+       GetCodingTable,GetFileId,GetFileIdSets,GetFileName,
        list.deleted,pdelete,relation,retrieval,RQDA,RQDA2tm,RQDAQuery,
        SearchFiles,ShowSubset,SummaryCoding,undelete,write.FileList)
 S3method(print,SummaryCoding)
